--- a/assest/css/home.css
+++ b/assest/css/home.css
@@ -33,6 +33,11 @@ body {
   margin-right: 0px;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 500px) {
   * {
     box-sizing: border-box;
