--- a/assest/css/index.css
+++ b/assest/css/index.css
@@ -33,6 +33,11 @@ body {
   margin-right: 0px;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 500px) {
   * {
     box-sizing: border-box;
@@ -100,5 +105,166 @@ body {
   }
   h2 {
     font-size: 6rem !important;
+  }
+}
+.item {
+  width: 60%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  margin: 2rem auto;
+}
+.item__one {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.item__one__img {
+  width: 550px;
+  height: 180px;
+}
+.item__one__image {
+  height: 180px;
+  width: 250px;
+}
+.item__one__imag {
+  height: 400px;
+  width: 300px;
+}
+.item__two {
+  font-size: 6rem;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  width: 600px;
+  background: linear-gradient(rgb(254, 255, 251), rgb(231, 233, 225), rgb(232, 255, 179));
+  height: 200px;
+}
+.item__three {
+  font-size: 2.5rem;
+  background: linear-gradient(rgb(246, 120, 141), rgb(244, 221, 225), rgb(188, 113, 125));
+  color: rgb(86, 83, 83);
+  height: 200px;
+  width: 300px;
+}
+.item__four {
+  grid-row-start: 2;
+  grid-row-end: 4;
+  overflow: hidden;
+  grid-column: 1/2;
+  height: 400px;
+  width: 300px;
+}
+.item__five {
+  background: linear-gradient(rgb(139, 139, 139), rgb(181, 230, 251), rgb(84, 83, 83));
+  font-size: 2.5rem;
+  color: white;
+  height: 200px;
+  width: 300px;
+}
+.item__six {
+  font-size: 2.5rem;
+  background: linear-gradient(rgb(2, 105, 40), rgb(217, 224, 169), rgb(3, 85, 31));
+  height: 200px;
+  width: 300px;
+}
+.item__seven {
+  height: 200px;
+  width: 300px;
+}
+.item__eight {
+  height: 200px;
+  width: 300px;
+}
+.item__nine {
+  height: 200px;
+  width: 300px;
+}
+.item__ten {
+  height: 200px;
+  grid-column-start: 2;
+  grid-column-end: 4;
+  width: 600px;
+}
+
+@media screen and (max-width: 500px) {
+  .item {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    margin: 2rem auto;
+  }
+  .item__one {
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .item__one__img {
+    width: 400px;
+    height: 150px;
+  }
+  .item__one__image {
+    height: 150px;
+    width: 250px;
+  }
+  .item__one__imag {
+    height: 350px;
+    width: 200px;
+  }
+  .item__two {
+    font-size: 4rem !important;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    width: 500px;
+    background: linear-gradient(rgb(254, 255, 251), rgb(231, 233, 225), rgb(232, 255, 179));
+    height: 200px;
+  }
+  .item__three {
+    font-size: 0.75rem !important;
+    background: linear-gradient(rgb(246, 120, 141), rgb(244, 221, 225), rgb(188, 113, 125));
+    color: rgb(86, 83, 83);
+    height: 200px;
+    width: 300px;
+  }
+  .item__four {
+    grid-row-start: 2;
+    grid-row-end: 4;
+    overflow: hidden;
+    grid-column: 1/2;
+    height: 300px;
+    width: 250px;
+  }
+  .item__five {
+    background: linear-gradient(rgb(139, 139, 139), rgb(181, 230, 251), rgb(84, 83, 83));
+    font-size: 0.5rem !important;
+    color: white;
+    height: 200px;
+    width: 300px;
+  }
+  .item__six {
+    font-size: 0.5rem !important;
+    background: linear-gradient(rgb(2, 105, 40), rgb(217, 224, 169), rgb(3, 85, 31));
+    height: 200px;
+    width: 300px;
+  }
+  .item__seven {
+    height: 200px;
+    width: 300px;
+  }
+  .item__eight {
+    height: 150px;
+    width: 250px;
+  }
+  .item__nine {
+    height: 150px;
+    width: 250px;
+  }
+  .item__ten {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    width: 400px;
+    height: 150px;
   }
 }
