--- a/assest/sass/partials/grid/_grid.scss
+++ b/assest/sass/partials/grid/_grid.scss
@@ -95,6 +95,9 @@
         display: grid;
         grid-template-columns:repeat(3 ,1fr);
         grid-template-rows: repeat(4, 1fr);
+        h2{
+            font-size:3rem !important;
+        }
        
         margin:2rem auto;
         &__one{
@@ -104,17 +107,17 @@
             align-items: center;
            
             &__img{
-                width:400px;
-                height:150px;
+                width:500px;
+                height:180px;
             }
     
             &__image{
-                height:150px;
-                width:250px;    
+                height:180px;
+                width:270px;    
             }
             &__imag{
-                height:350px;
-                width:200px;   
+                height:400px;
+                width:250px;   
             }
         }
         &__two{
@@ -137,7 +140,7 @@
             grid-row-end:4;
             overflow: hidden;
             grid-column:1/2;
-            height:300px;
+            height:400px;
             width:250px;   
          
             
@@ -161,21 +164,22 @@
           
         }
         &__eight{
-            height:150px;
-                width:250px;
+            height:180px;
+                width:270px;
            
         }
         &__nine{
-            height:150px;
-            width:250px;
+            height:180px;
+            width:270px;
             
         }
         &__ten{
         
             grid-column-start:2;
             grid-column-end:4; 
-            width:400px;
-            height:150px;
+            width:500px;
+            height:180px;
+            margin-left:2rem;
           
         }
     }         
