--- a/assest/sass/partials/grid/_grid.scss
+++ b/assest/sass/partials/grid/_grid.scss
@@ -38,6 +38,7 @@
         color: rgb(86, 83, 83);
         height:200px;
         width:300px;
+        margin-left:-1.75rem;
     }
     &__four{
         grid-row-start:2;
@@ -134,6 +135,8 @@
             color: rgb(86, 83, 83);
             height:200px;
             width:300px;
+            margin-left:-2rem;
+            
         }
         &__four{
             grid-row-start:2;
