--- a/assest/sass/partials/grid/_grid.scss
+++ b/assest/sass/partials/grid/_grid.scss
@@ -4,20 +4,26 @@
     grid-template-columns:repeat(3 ,1fr);
     grid-template-rows: repeat(4, 1fr);
    
+   
     margin:2rem auto;
     &__one{
-        margin:10px;
+       margin-bottom:1rem;
        display: flex;
         justify-content: center;
         align-items: center;
+        border-radius:15px;
+        box-shadow:3px 3px 3px 3px gray;
+       
         &__img{
-            width:550px;
+            width:600px;
             height:180px;
+            border-radius:15px;
         }
 
         &__image{
             height:180px;
-            width:250px;    
+            width:280px; 
+            border-radius:15px;   
         }
         &__imag{
             height:400px;
@@ -31,6 +37,7 @@
         width:600px;  
       background:linear-gradient(rgb(254, 255, 251),rgb(231, 233, 225),rgb(232, 255, 179));
       height:200px;
+      margin-left:3rem;
     }
     &__three{
         font-size:2.5rem;
@@ -38,7 +45,7 @@
         color: rgb(86, 83, 83);
         height:200px;
         width:300px;
-        margin-left:-1.75rem;
+        margin-left:-3rem;
     }
     &__four{
         grid-row-start:2;
@@ -47,6 +54,7 @@
         grid-column:1/2;
         height:400px;
         width:300px;
+        margin-left:3rem;
      
         
     }
@@ -56,33 +64,41 @@
         color: white; 
         height:200px;
         width:300px;
+        margin-left:1rem;
     }
     &__six{
         font-size:2.5rem;
         background:linear-gradient(rgb(2, 105, 40),rgb(217, 224, 169),rgb(3, 85, 31));  
         height:200px;
         width:300px;
+        margin-left:1rem;
     }
     &__seven{
-        height:200px;
-        width:300px;
+        height:180px;
+        width:280px;
+        margin-left:-2rem;
+        margin-top:1rem;
       
     }
     &__eight{
-        height:200px;
-        width:300px;
+        height:180px;
+        width:280px;
+        margin-left:-2rem;
+        margin-top:1rem;
        
     }
     &__nine{
-        height:200px;
-        width:300px;
+        height:180px;
+        width:280px;
+        margin-left:3rem;
         
     }
     &__ten{
-        height:200px;
+        height:180px;
         grid-column-start:2;
         grid-column-end:4; 
         width:600px;
+        margin-left:2rem;
       
     }
 }
